--- a/homehero.html
+++ b/homehero.html
@@ -1,200 +1,287 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EPÒK | Enter Your Era</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EPÒK | Enter Your Era</title>
 
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body, html {
-            width: 100%; height: 100%;
-            background: black;
-            overflow: hidden;
-            font-family: sans-serif;
-        }
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        /* HERO BACKGROUND – 9378.png */
-        #hero-bg {
-            position: fixed;
-            inset: 0;
-            background-image: url("assets/images/9378.png");
-            background-size: contain;
-            background-position: center;
-            background-repeat: no-repeat;
-            opacity: 0;
-            transition: opacity 1.5s ease;
-            z-index: 1;
-        }
+    html,
+    body {
+      width: 100%;
+      height: 100%;
+      background: #000;
+      overflow: hidden;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    }
 
-        /* HERO CHARACTER – herocharacter.png */
-        #hero-character {
-            position: fixed;
-            top: 50%; left: 50%;
-            transform: translate(-50%, -50%);
-            max-width: 90vw;
-            max-height: 90vh;
-            opacity: 0;
-            transition: opacity 2s ease;
-            z-index: 2;
-            pointer-events: none;
-        }
+    /* ===== HERO BACKGROUND (9378.png) ===== */
+    #hero-bg {
+      position: fixed;
+      inset: 0;
+      background-image: url("assets/images/9378.png");
+      background-size: contain;      /* keep full art, no crop */
+      background-position: center;
+      background-repeat: no-repeat;
+      opacity: 0;
+      transition: opacity 1.6s ease;
+      z-index: 0;
+    }
 
-        /* BG Drift */
-        .show-bg {
-            opacity: 1;
-            animation: driftBG 18s ease-in-out infinite alternate;
-        }
-        @keyframes driftBG {
-            0% { transform: scale(1) translate(0,0); }
-            50% { transform: scale(1.03) translate(-10px,-6px); }
-            100% { transform: scale(1.01) translate(8px,5px); }
-        }
+    .show-bg {
+      opacity: 1;
+      animation: heroDrift 20s ease-in-out infinite alternate;
+    }
 
-        /* Character Drift */
-        .show-char {
-            opacity: 1;
-            animation: driftChar 22s ease-in-out infinite alternate;
-        }
-        @keyframes driftChar {
-            0% { transform: translate(-50%, -50%) scale(1); }
-            50% { transform: translate(calc(-50% - 4px), calc(-50% - 6px)) scale(1.03); }
-            100% { transform: translate(calc(-50% + 3px), calc(-50% + 5px)) scale(1.02); }
-        }
+    @keyframes heroDrift {
+      0% {
+        transform: scale(1) translate(0, 0);
+      }
+      50% {
+        transform: scale(1.03) translate(-10px, -6px);
+      }
+      100% {
+        transform: scale(1.01) translate(8px, 4px);
+      }
+    }
 
-        /* Crest (center) – crest1.png */
-        #intro-crest {
-            position: fixed;
-            top: 50%; left: 50%;
-            transform: translate(-50%, -50%);
-            width: 230px;
-            z-index: 5;
-            cursor: pointer;
-            opacity: 1;
-        }
+    /* ===== HERO CHARACTER (herocharacter.png) ===== */
+    #hero-character {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 90vw;
+      max-height: 90vh;
+      opacity: 0;
+      transition: opacity 1.8s ease;
+      z-index: 1;
+      pointer-events: none;
+    }
 
-        /* CLICK HERE */
-        #click-here {
-            position: fixed;
-            top: calc(50% + 150px);
-            left: 50%;
-            transform: translateX(-50%);
-            color: white;
-            font-size: 1rem;
-            letter-spacing: 4px;
-            cursor: pointer;
-            z-index: 6;
-        }
+    .show-char {
+      opacity: 1;
+      animation: charDrift 24s ease-in-out infinite alternate;
+    }
 
-        /* Heartbeat effect */
-        .heartbeat {
-            animation: heartbeatPulse 1s ease-in-out infinite;
-        }
-        @keyframes heartbeatPulse {
-            0% { transform: translate(-50%, -50%) scale(1); }
-            30% { transform: translate(-50%, -50%) scale(1.22); }
-            60% { transform: translate(-50%, -50%) scale(1.05); }
-            100% { transform: translate(-50%, -50%) scale(1); }
-        }
+    @keyframes charDrift {
+      0% {
+        transform: translate(-50%, -50%) scale(1);
+      }
+      50% {
+        transform: translate(calc(-50% - 4px), calc(-50% - 8px)) scale(1.04);
+      }
+      100% {
+        transform: translate(calc(-50% + 3px), calc(-50% + 5px)) scale(1.02);
+      }
+    }
 
-        /* Fade out crest */
-        .fade-out {
-            animation: fadeOut 0.9s ease forwards;
-        }
-        @keyframes fadeOut { to { opacity: 0; } }
+    /* ===== INTRO CREST (crest1.png) ===== */
+    #intro-crest {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      width: 220px;
+      max-width: 60vw;
+      transform: translate(-50%, -50%);
+      filter: drop-shadow(0 0 26px rgba(255, 215, 0, 0.85));
+      opacity: 1;
+      z-index: 10;
+      cursor: pointer;
+    }
 
-        /* ENTER button – 8187.png */
-        #enter-wrap {
-            position: fixed;
-            bottom: 15px; right: 15px;
-            text-align: center;
-            opacity: 0;
-            transition: opacity 1s ease;
-            z-index: 10;
-        }
+    #click-here {
+      position: fixed;
+      top: calc(50% + 140px);
+      left: 50%;
+      transform: translateX(-50%);
+      color: #f8f8f8;
+      letter-spacing: 0.25em;
+      font-size: 0.9rem;
+      text-transform: uppercase;
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+      cursor: pointer;
+      z-index: 11;
+      user-select: none;
+    }
 
-        #enter-button {
-            width: 120px;
-            cursor: pointer;
-        }
+    .heartbeat {
+      animation: heartbeatPulse 1s ease-in-out infinite;
+    }
 
-        #enter-label {
-            color: white;
-            margin-top: 5px;
-            letter-spacing: 5px;
-            font-size: 0.75rem;
-        }
+    @keyframes heartbeatPulse {
+      0% {
+        transform: translate(-50%, -50%) scale(1);
+      }
+      30% {
+        transform: translate(-50%, -50%) scale(1.18);
+      }
+      60% {
+        transform: translate(-50%, -50%) scale(1.02);
+      }
+      100% {
+        transform: translate(-50%, -50%) scale(1);
+      }
+    }
 
-        .enter-visible { opacity: 1; }
-    </style>
+    .fade-out {
+      animation: crestFadeOut 0.9s ease forwards;
+    }
+
+    @keyframes crestFadeOut {
+      from {
+        opacity: 1;
+      }
+      to {
+        opacity: 0;
+      }
+    }
+
+    /* ===== ENTER BUTTON (8187.png) ===== */
+    #enter-wrap {
+      position: fixed;
+      bottom: 10px;
+      right: 10px;
+      text-align: center;
+      color: #fff;
+      z-index: 20;
+      opacity: 0;
+      transition: opacity 1s ease, transform 0.3s ease;
+    }
+
+    #enter-button {
+      width: 120px;
+      max-width: 30vw;
+      cursor: pointer;
+      filter: drop-shadow(0 0 14px rgba(0, 0, 0, 0.7));
+      transition: transform 0.3s ease, filter 0.3s ease;
+      display: block;
+      margin: 0 auto;
+    }
+
+    #enter-button:hover {
+      transform: scale(1.08);
+      filter: drop-shadow(0 0 18px rgba(255, 215, 0, 0.9));
+    }
+
+    #enter-label {
+      margin-top: 4px;
+      font-size: 0.75rem;
+      letter-spacing: 0.25em;
+      text-transform: uppercase;
+      text-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
+    }
+
+    .enter-visible {
+      opacity: 1;
+    }
+
+    @media (max-width: 600px) {
+      #intro-crest {
+        width: 180px;
+      }
+      #click-here {
+        top: calc(50% + 110px);
+        font-size: 0.8rem;
+      }
+      #enter-button {
+        width: 100px;
+      }
+    }
+  </style>
 </head>
 
 <body>
+  <!-- HERO BACKGROUND (9378.png) -->
+  <div id="hero-bg"></div>
 
-    <!-- HERO BG -->
-    <div id="hero-bg"></div>
+  <!-- HERO CHARACTER (herocharacter.png) -->
+  <img
+    id="hero-character"
+    src="assets/images/herocharacter.png"
+    alt="EPÒK Hero"
+  />
 
-    <!-- HERO CHARACTER -->
-    <img id="hero-character" src="assets/images/herocharacter.png" />
+  <!-- INTRO CREST (crest1.png) -->
+  <img
+    id="intro-crest"
+    src="assets/images/crest1.png"
+    alt="EPÒK Crest"
+  />
 
-    <!-- CREST -->
-    <img id="intro-crest" src="assets/images/crest1.png" />
+  <!-- CLICK HERE TEXT -->
+  <div id="click-here">CLICK HERE</div>
 
-    <!-- CLICK HERE -->
-    <div id="click-here">CLICK HERE</div>
+  <!-- ENTER BUTTON (8187.png) -->
+  <div id="enter-wrap">
+    <img
+      id="enter-button"
+      src="assets/images/8187.png"
+      alt="Enter EPÒK"
+    />
+    <div id="enter-label">ENTER</div>
+  </div>
 
-    <!-- ENTER BUTTON -->
-    <div id="enter-wrap">
-        <img id="enter-button" src="assets/images/8187.png">
-        <div id="enter-label">ENTER</div>
-    </div>
+  <!-- HEARTBEAT AUDIO -->
+  <audio
+    id="heartbeat-audio"
+    src="assets/images/Heartbeat%20sound.mp3"
+  ></audio>
 
-    <!-- HEARTBEAT SOUND -->
-    <audio id="heartbeat" src="assets/images/Heartbeat sound.mp3"></audio>
-
-<script>
-    const clickHere = document.getElementById("click-here");
-    const crest = document.getElementById("intro-crest");
-    const heroBG = document.getElementById("hero-bg");
-    const heroChar = document.getElementById("hero-character");
+  <script>
+    const clickText = document.getElementById("click-here");
+    const introCrest = document.getElementById("intro-crest");
+    const heroBg = document.getElementById("hero-bg");
+    const heroCharacter = document.getElementById("hero-character");
     const enterWrap = document.getElementById("enter-wrap");
-    const heartbeat = document.getElementById("heartbeat");
+    const enterButton = document.getElementById("enter-button");
+    const heartbeat = document.getElementById("heartbeat-audio");
 
     let started = false;
 
-    function begin() {
-        if (started) return;
-        started = true;
+    function beginIntro() {
+      if (started) return;
+      started = true;
 
-        clickHere.style.display = "none";
-        crest.classList.add("heartbeat");
+      // hide CLICK HERE
+      clickText.style.display = "none";
 
-        heartbeat.play().catch(()=>{});
+      // heartbeat animation
+      introCrest.classList.add("heartbeat");
+
+      // play sound (may be blocked if browser hates it, but won't break page)
+      heartbeat.currentTime = 0;
+      heartbeat.play().catch(() => {});
+
+      // after 5 seconds, fade crest + show hero
+      setTimeout(() => {
+        introCrest.classList.remove("heartbeat");
+        introCrest.classList.add("fade-out");
+
+        heartbeat.pause();
+        heartbeat.currentTime = 0;
+
+        heroBg.classList.add("show-bg");
+        heroCharacter.classList.add("show-char");
 
         setTimeout(() => {
-            crest.classList.remove("heartbeat");
-            crest.classList.add("fade-out");
-
-            heartbeat.pause();
-            heartbeat.currentTime = 0;
-
-            heroBG.classList.add("show-bg");
-            heroChar.classList.add("show-char");
-
-            setTimeout(() => {
-                enterWrap.classList.add("enter-visible");
-            }, 1200);
-
-        }, 5000);
+          enterWrap.classList.add("enter-visible");
+        }, 1200);
+      }, 5000);
     }
 
-    crest.addEventListener("click", begin);
-    clickHere.addEventListener("click", begin);
+    clickText.addEventListener("click", beginIntro);
+    introCrest.addEventListener("click", beginIntro);
 
-    document.getElementById("enter-button").addEventListener("click", () => {
-        window.location.href = "index.html";
+    enterButton.addEventListener("click", () => {
+      window.location.href = "index.html"; // change if your main page has a different name
     });
-</script>
-
+  </script>
 </body>
 </html>
