--- a/homehero.html
+++ b/homehero.html
@@ -228,10 +228,10 @@
     <div id="enter-label">ENTER</div>
   </div>
 
-  <!-- HEARTBEAT AUDIO -->
+  <!-- HEARTBEATAUDIO -->
   <audio
     id="heartbeat-audio"
-    src="assets/images/Heartbeat%20sound.mp3"
+    src="assets/images/Heartbeatsound.mp3"
   ></audio>
 
   <script>
