--- a/homehero.html
+++ b/homehero.html
@@ -229,10 +229,8 @@
   </div>
 
   <!-- HEARTBEATAUDIO -->
-  <audio
-    id="heartbeat-audio"
-    src="assets/images/Heartbeatsound.mp3"
-  ></audio>
+  <audio id="heartbeat-audio" src="assets/images/Heartbeatsound.mp3"></audio>
+
 
   <script>
     const clickText = document.getElementById("click-here");
